# primenum

./: CMakeLists.txt  README.md  main.c
